--- a/BS/BS/Classes/Essence-精华/View/DZYCommentCell.xib
+++ b/BS/BS/Classes/Essence-精华/View/DZYCommentCell.xib
@@ -6,18 +6,112 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DZYCommentCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="comment" rowHeight="93" id="Dlb-K3-ndH" customClass="DZYCommentCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dlb-K3-ndH" id="dbY-E2-BeZ">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GiJ-z9-aD7">
-                        <rect key="frame" x="28" y="4" width="51" height="31"/>
-                    </switch>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OIl-oI-uqf" userLabel="头像">
+                        <rect key="frame" x="10" y="10" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="MaG-h1-DGd"/>
+                            <constraint firstAttribute="height" constant="35" id="Z01-nN-S4y"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile_manIcon" translatesAutoresizingMaskIntoConstraints="NO" id="MXf-5C-xPf" userLabel="性别">
+                        <rect key="frame" x="45" y="10" width="30" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="PZy-Zj-HCR"/>
+                            <constraint firstAttribute="width" constant="30" id="fzq-W9-yLr"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOd-Ww-gTw" userLabel="用户名">
+                        <rect key="frame" x="75" y="10" width="36" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bn1-ll-9yf" userLabel="点赞按钮">
+                        <rect key="frame" x="280" y="10" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="8oK-9Y-opL"/>
+                            <constraint firstAttribute="width" constant="30" id="AVi-Le-uLi"/>
+                        </constraints>
+                        <state key="normal" image="commentLikeButton">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <state key="highlighted" image="commentLikeButtonClick"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Suq-L1-5Ge" userLabel="点赞数量">
+                        <rect key="frame" x="270" y="50" width="40" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="fb3-xq-l76"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabelLabelLabelLabelLabelLabelLabelLabe" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="048-YF-Dim" userLabel="评论内容">
+                        <rect key="frame" x="53" y="35" width="212" height="47"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="ARi-yk-yk9"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Wo-l5-Fgo">
+                        <rect key="frame" x="53" y="35" width="66" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="XVa-E2-CSW"/>
+                            <constraint firstAttribute="width" constant="66" id="Z05-gc-6Nh"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <inset key="imageEdgeInsets" minX="50" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <state key="normal" title="10''" image="play-voice-stop" backgroundImage="play-voice-bg">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="048-YF-Dim" secondAttribute="bottom" constant="10" id="1Qf-FE-8rR"/>
+                    <constraint firstItem="bn1-ll-9yf" firstAttribute="trailing" secondItem="Suq-L1-5Ge" secondAttribute="trailing" id="7f9-7X-B4R"/>
+                    <constraint firstItem="048-YF-Dim" firstAttribute="leading" secondItem="MXf-5C-xPf" secondAttribute="leading" constant="8" id="DFJ-gw-1qH"/>
+                    <constraint firstItem="OIl-oI-uqf" firstAttribute="top" secondItem="dbY-E2-BeZ" secondAttribute="top" constant="10" id="Fm9-yw-I6p"/>
+                    <constraint firstItem="Suq-L1-5Ge" firstAttribute="top" secondItem="bn1-ll-9yf" secondAttribute="bottom" constant="10" id="G15-t2-hu3"/>
+                    <constraint firstItem="048-YF-Dim" firstAttribute="leading" secondItem="5Wo-l5-Fgo" secondAttribute="leading" id="HBf-D0-gUb"/>
+                    <constraint firstItem="MXf-5C-xPf" firstAttribute="leading" secondItem="OIl-oI-uqf" secondAttribute="trailing" id="Jb1-ND-x7v"/>
+                    <constraint firstItem="Suq-L1-5Ge" firstAttribute="leading" secondItem="048-YF-Dim" secondAttribute="trailing" constant="5" id="Mfh-o9-XeF"/>
+                    <constraint firstItem="bn1-ll-9yf" firstAttribute="top" secondItem="dbY-E2-BeZ" secondAttribute="top" constant="10" id="OeU-Oo-Vsm"/>
+                    <constraint firstItem="vOd-Ww-gTw" firstAttribute="leading" secondItem="MXf-5C-xPf" secondAttribute="trailing" id="bRo-ir-J7O"/>
+                    <constraint firstItem="048-YF-Dim" firstAttribute="top" secondItem="vOd-Ww-gTw" secondAttribute="bottom" constant="5" id="bUy-Cn-QsM"/>
+                    <constraint firstAttribute="trailing" secondItem="bn1-ll-9yf" secondAttribute="trailing" constant="10" id="dUB-sg-Tyd"/>
+                    <constraint firstItem="vOd-Ww-gTw" firstAttribute="bottom" secondItem="MXf-5C-xPf" secondAttribute="bottom" id="dmd-MK-O42"/>
+                    <constraint firstItem="vOd-Ww-gTw" firstAttribute="top" secondItem="MXf-5C-xPf" secondAttribute="top" id="gLs-11-I98"/>
+                    <constraint firstItem="048-YF-Dim" firstAttribute="top" secondItem="5Wo-l5-Fgo" secondAttribute="top" id="kg0-aC-x53"/>
+                    <constraint firstItem="OIl-oI-uqf" firstAttribute="leading" secondItem="dbY-E2-BeZ" secondAttribute="leading" constant="10" id="nGd-n5-nQ6"/>
+                    <constraint firstItem="OIl-oI-uqf" firstAttribute="top" secondItem="MXf-5C-xPf" secondAttribute="top" id="v5K-TT-cug"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="contentLabel" destination="048-YF-Dim" id="fPM-Zi-EhK"/>
+                <outlet property="likeCountLabel" destination="Suq-L1-5Ge" id="Pbk-NS-Sts"/>
+                <outlet property="profileImageView" destination="OIl-oI-uqf" id="XM5-rA-hLU"/>
+                <outlet property="sexImageView" destination="MXf-5C-xPf" id="D2J-ma-y3w"/>
+                <outlet property="usernameLabel" destination="vOd-Ww-gTw" id="6AU-Jz-qfL"/>
+                <outlet property="voiceButton" destination="5Wo-l5-Fgo" id="cfV-Zb-Yjb"/>
+            </connections>
+            <point key="canvasLocation" x="-769" y="387.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Profile_manIcon" width="13" height="13"/>
+        <image name="commentLikeButton" width="18" height="18"/>
+        <image name="commentLikeButtonClick" width="19" height="19"/>
+        <image name="play-voice-bg" width="62" height="22"/>
+        <image name="play-voice-stop" width="12" height="12"/>
+    </resources>
 </document>
