--- a/BS/BS/Classes/FriendTrends-关注/View/DZYUserCell.xib
+++ b/BS/BS/Classes/FriendTrends-关注/View/DZYUserCell.xib
@@ -6,18 +6,80 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="user" id="KGk-i7-Jjw" customClass="DZYUserCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="user" rowHeight="83" id="KGk-i7-Jjw" customClass="DZYUserCell">
+            <rect key="frame" x="0.0" y="0.0" width="335" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Gc3-Wt-eHv">
-                        <rect key="frame" x="8" y="6" width="94" height="29"/>
-                    </stepper>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B8e-gC-Rv2">
+                        <rect key="frame" x="10" y="16" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="GWB-b6-gdz"/>
+                            <constraint firstAttribute="width" constant="50" id="Zo7-oW-vhu"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r6Z-B6-Xu2">
+                        <rect key="frame" x="70" y="16" width="190" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxB-0m-QGK">
+                        <rect key="frame" x="70" y="49" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6m-oh-2qf">
+                        <rect key="frame" x="265" y="29" width="50" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="nfS-a1-A93"/>
+                            <constraint firstAttribute="width" constant="50" id="zLN-dk-aLI"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <state key="normal" title="+ 关注" backgroundImage="FollowBtnBg">
+                            <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <state key="highlighted" backgroundImage="FollowBtnClickBg">
+                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qt7-rB-mAn" userLabel="分割线">
+                        <rect key="frame" x="0.0" y="81.5" width="335" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="heJ-PK-U4f"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="r6Z-B6-Xu2" firstAttribute="top" secondItem="B8e-gC-Rv2" secondAttribute="top" constant="-0.5" id="4zU-8d-axi"/>
+                    <constraint firstAttribute="centerY" secondItem="B8e-gC-Rv2" secondAttribute="centerY" id="5tq-Dd-h3l"/>
+                    <constraint firstItem="B8e-gC-Rv2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="C7g-Ii-NJf"/>
+                    <constraint firstAttribute="centerY" secondItem="D6m-oh-2qf" secondAttribute="centerY" id="GcX-2Q-3Bw"/>
+                    <constraint firstItem="qt7-rB-mAn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="R4l-eO-Qid"/>
+                    <constraint firstItem="r6Z-B6-Xu2" firstAttribute="leading" secondItem="B8e-gC-Rv2" secondAttribute="trailing" constant="10" id="RmJ-2E-CET"/>
+                    <constraint firstItem="B8e-gC-Rv2" firstAttribute="bottom" secondItem="xxB-0m-QGK" secondAttribute="bottom" id="SRp-HM-jiF"/>
+                    <constraint firstAttribute="bottom" secondItem="qt7-rB-mAn" secondAttribute="bottom" id="aat-tO-fg6"/>
+                    <constraint firstItem="r6Z-B6-Xu2" firstAttribute="leading" secondItem="xxB-0m-QGK" secondAttribute="leading" id="dXR-kx-vSg"/>
+                    <constraint firstAttribute="trailing" secondItem="qt7-rB-mAn" secondAttribute="trailing" id="h7t-xh-mh9"/>
+                    <constraint firstAttribute="trailing" secondItem="D6m-oh-2qf" secondAttribute="trailing" constant="20" id="p4l-f7-zzY"/>
+                    <constraint firstItem="D6m-oh-2qf" firstAttribute="leading" secondItem="r6Z-B6-Xu2" secondAttribute="trailing" constant="5" id="pbf-us-poY"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="fansCountLabel" destination="xxB-0m-QGK" id="90g-Nm-yfX"/>
+                <outlet property="headImageView" destination="B8e-gC-Rv2" id="Gp2-1U-hS0"/>
+                <outlet property="screenNameLabel" destination="r6Z-B6-Xu2" id="29i-SV-KDU"/>
+            </connections>
+            <point key="canvasLocation" x="211.5" y="285.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="FollowBtnBg" width="51" height="25"/>
+        <image name="FollowBtnClickBg" width="51" height="25"/>
+    </resources>
 </document>
